--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,9 @@
 <androidx.fragment.app.FragmentContainerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_container"
+    android:id="@+id/fcv_root"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:defaultNavHost="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="androidx.navigation.fragment.NavHostFragment"
-    app:navGraph="@navigation/root_graph"
-    app:defaultNavHost="true" />
+    app:navGraph="@navigation/root_graph" />
