--- a/app/src/main/res/navigation/bnv_graph.xml
+++ b/app/src/main/res/navigation/bnv_graph.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root_graph">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_graph"
+    app:startDestination="@id/homeFragment">
+    <fragment
+        android:id="@+id/homeFragment"
+        tools:layout="@layout/fragment_home"
+        android:name="ru.verdan.feature.home.presentation.HomeFragment"
+        android:label="HomeFragment" />
 </navigation>
