--- a/core/theme/src/main/res/layout/track_item.xml
+++ b/core/theme/src/main/res/layout/track_item.xml
@@ -1,38 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/iv_cover"
-        android:contentDescription="@string/default_content_description"
-        android:layout_width="@dimen/size_normal"
-        android:layout_height="@dimen/size_normal"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/image_placeholder" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    app:cardCornerRadius="@dimen/corners_medium">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/margin_normal"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_normal">
 
-        <TextView
-            android:id="@+id/tv_title"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Title" />
+            app:cardCornerRadius="@dimen/corners_normal">
 
-        <TextView
-            android:id="@+id/tv_artist"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_cover"
+                android:contentDescription="@string/default_content_description"
+                android:layout_width="@dimen/size_normal"
+                android:layout_height="@dimen/size_normal"
+                android:scaleType="centerCrop"
+                tools:src="@drawable/image_placeholder" />
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="Author" />
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/margin_normal"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Title" />
+
+            <TextView
+                android:id="@+id/tv_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Author" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
