--- a/core/theme/src/main/res/values/dimens.xml
+++ b/core/theme/src/main/res/values/dimens.xml
@@ -29,4 +29,19 @@
     <dimen name="size_large">128dp</dimen>
     <dimen name="size_extra_large">256dp</dimen>
 
+    <dimen name="text_size_body_small">12sp</dimen>
+    <dimen name="text_size_body_normal">14sp</dimen>
+    <dimen name="text_size_body_large">16sp</dimen>
+
+    <dimen name="text_size_title_small">16sp</dimen>
+    <dimen name="text_size_title_normal">18sp</dimen>
+    <dimen name="text_size_title_large">20sp</dimen>
+
+    <dimen name="text_size_display_small">24sp</dimen>
+    <dimen name="text_size_display_normal">28sp</dimen>
+    <dimen name="text_size_display_large">32sp</dimen>
+
+    <dimen name="text_size_label_small">10sp</dimen>
+    <dimen name="text_size_label_normal">12sp</dimen>
+    <dimen name="text_size_label_large">14sp</dimen>
 </resources>
