--- a/feature/track-player/src/main/res/layout/fragment_track_player.xml
+++ b/feature/track-player/src/main/res/layout/fragment_track_player.xml
@@ -26,6 +26,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_marginTop="@dimen/margin_large"
         style="@style/AppDisplayLarge"
         tools:text="Track title" />
@@ -34,6 +35,7 @@
         android:id="@+id/tv_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_marginTop="@dimen/margin_normal"
         style="@style/AppTitleLarge"
         tools:text="Artist" />
@@ -42,15 +44,38 @@
         android:id="@+id/sb_progress"
         android:layout_width="@dimen/size_extra_large"
         android:layout_height="wrap_content"
+        android:max="100"
         android:layout_marginTop="@dimen/margin_medium" />
 
-    <TextView
-        android:id="@+id/tv_progress"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_normal"
-        style="@style/AppBodyLarge"
-        tools:text="02:13/05:34" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
+            style="@style/AppBodyLarge"
+            tools:text="02:13" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
+            style="@style/AppBodyLarge"
+            android:text="/" />
+
+        <TextView
+            android:id="@+id/tv_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_normal"
+            style="@style/AppBodyLarge"
+            tools:text="02:13" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -77,10 +102,19 @@
             android:id="@+id/ib_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginStart="@dimen/margin_normal"
             android:contentDescription="@string/default_content_description"
             android:src="@drawable/ic_next_24" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="@dimen/margin_medium"
+        style="@style/AppTitleLarge"
+        tools:text="Album" />
 
 </LinearLayout>
