--- a/feature/track-player/src/main/res/layout/fragment_track_player.xml
+++ b/feature/track-player/src/main/res/layout/fragment_track_player.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -21,31 +20,31 @@
             android:contentDescription="@string/default_content_description" />
 
     </androidx.cardview.widget.CardView>
-    
+
     <TextView
         android:id="@+id/tv_title"
+        style="@style/AppDisplayLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginTop="@dimen/margin_large"
-        style="@style/AppDisplayLarge"
+        android:textAlignment="center"
         tools:text="Track title" />
 
     <TextView
         android:id="@+id/tv_artist"
+        style="@style/AppTitleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginTop="@dimen/margin_normal"
-        style="@style/AppTitleLarge"
+        android:textAlignment="center"
         tools:text="Artist" />
 
     <SeekBar
         android:id="@+id/sb_progress"
         android:layout_width="@dimen/size_extra_large"
         android:layout_height="wrap_content"
-        android:max="100"
-        android:layout_marginTop="@dimen/margin_medium" />
+        android:layout_marginTop="@dimen/margin_medium"
+        android:max="100" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -54,25 +53,25 @@
 
         <TextView
             android:id="@+id/tv_progress"
+            style="@style/AppBodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
-            style="@style/AppBodyLarge"
             tools:text="02:13" />
 
         <TextView
+            style="@style/AppBodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
-            style="@style/AppBodyLarge"
             android:text="/" />
 
         <TextView
             android:id="@+id/tv_duration"
+            style="@style/AppBodyLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
-            style="@style/AppBodyLarge"
             tools:text="02:13" />
 
     </LinearLayout>
@@ -87,7 +86,7 @@
             android:id="@+id/ib_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_normal"
+            android:layout_marginEnd="@dimen/margin_normal"
             android:contentDescription="@string/default_content_description"
             android:src="@drawable/ic_prev_24" />
 
@@ -110,11 +109,20 @@
 
     <TextView
         android:id="@+id/tv_album"
+        style="@style/AppTitleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginTop="@dimen/margin_medium"
-        style="@style/AppTitleLarge"
+        android:textAlignment="center"
         tools:text="Album" />
+
+    <ImageButton
+        android:id="@+id/ib_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_gravity="center"
+        android:contentDescription="@string/default_content_description"
+        android:src="@drawable/save_24" />
 
 </LinearLayout>
