--- a/app/src/main/res/menu/bnv_items.xml
+++ b/app/src/main/res/menu/bnv_items.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/fragment_home"
+        android:id="@+id/homeFragment"
         android:title="@string/menu_home"
         android:icon="@drawable/home_24" />
     <item
-        android:id="@+id/fragment_loaded_tracks"
+        android:id="@+id/loadedTracksFragment"
         android:title="@string/menu_loaded_tracks"
         android:icon="@drawable/loaded_tracks_24" />
 </menu>
