--- a/feature/loaded-tracks/src/main/res/layout/fragment_loaded_tracks.xml
+++ b/feature/loaded-tracks/src/main/res/layout/fragment_loaded_tracks.xml
@@ -24,6 +24,15 @@
             tools:itemCount="5"
             tools:listitem="@layout/track_item" />
 
+        <TextView
+            android:id="@+id/tv_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:visibility="invisible"
+            android:text="@string/empty" />
+
         <include
             android:id="@+id/progress_chart_tracks"
             layout="@layout/progress_indicator_layout" />
